--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "wego-web",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://danhthanh418.github.io/wego-web",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-facebook-login": "^4.1.1",
@@ -13,6 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
