--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "firebase": "^5.6.0",
     "lodash": "^4.17.11",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "reactstrap": "^6.5.0",
-    "semantic-ui-react": "^0.83.0"
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
