--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "firebase": "^5.6.0",
     "lodash": "^4.17.11",
     "react": "^16.6.1",
+    "react-date-picker": "^7.1.1",
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.6.1",
     "react-facebook": "^6.0.15",
