--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-facebook": "^6.0.15",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-scrollspy": "^3.3.5",
     "react-transition-group": "^1.2.1",
     "reactstrap": "^6.5.0"
   },
