--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "dotenv": "^6.2.0",
+    "downshift": "^3.1.8",
     "firebase": "^5.6.0",
     "lodash": "^4.17.11",
     "react": "^16.6.1",
