--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.6.1",
     "react-facebook": "^6.0.15",
+    "react-gradient-text": "^0.1.0",
     "react-highlight-words": "^0.15.1",
     "react-number-format": "^4.0.5",
     "react-router-dom": "^4.3.1",
