--- a/package.json
+++ b/package.json
@@ -2,32 +2,29 @@
   "name": "wego-web",
   "version": "0.1.10",
   "private": true,
+  "homepage": "https://danhthanh418.github.io/wego-web/",
   "dependencies": {
-    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "dotenv": "^6.2.0",
-    "downshift": "^3.1.8",
-    "express": "^4.16.4",
     "firebase": "^5.6.0",
+    "gh-pages": "^2.0.1",
     "lodash": "^4.17.11",
     "react": "^16.6.1",
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.6.1",
     "react-facebook": "^6.0.15",
-    "react-gradient-text": "^0.1.0",
-    "react-highlight-words": "^0.15.1",
     "react-number-format": "^4.0.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-scrollspy": "^3.3.5",
-    "react-stripe-elements": "^2.0.1",
-    "react-transition-group": "^1.2.1",
     "reactstrap": "^6.5.0",
     "stripe": "^6.20.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
