--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "bootstrap": "^4.1.3",
     "dotenv": "^6.2.0",
     "firebase": "^5.6.0",
-    "gh-pages": "^2.0.1",
     "lodash": "^4.17.11",
     "react": "^16.6.1",
     "react-datepicker": "^2.0.0",
@@ -16,8 +15,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-scrollspy": "^3.3.5",
-    "reactstrap": "^6.5.0",
-    "stripe": "^6.20.0"
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
